--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
     "name": "crud-saskaita",
     "version": "1.0.0",
-    "description": "invoices",
-    "main": "app.js",
+    "description": "",
+    "main": "index.js",
     "scripts": {
-        "start": "npx mix watch"
+        "start": "node --watch index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/coffee-terminal/invoice-CRUD.git"
     },
     "keywords": [],
-    "author": "coffee-terminal",
+    "author": "",
     "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/coffee-terminal/invoice-CRUD/issues"
+    },
+    "homepage": "https://github.com/coffee-terminal/invoice-CRUD#readme",
     "type": "commonjs",
-    "devDependencies": {
-        "laravel-mix": "^6.0.49",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.97.2",
-        "sass-loader": "^12.1.0"
+    "dependencies": {
+        "express": "^5.2.1",
+        "uuid": "^13.0.0"
     }
 }
